fix api getCategories & add product to cart

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000/api/5bea4c73-4202-4667-ab4b-06119773ac35
+NEXT_PUBLIC_APP_API_URL=http://localhost:3000/api/
